# serif

./: README.md  build_release.sh
src/: CMakeLists.txt  README.profiling  export.cmake.in  fix_vcproj_guids.py
src/ASRSentBreaker/: ASRSentBreaker.vcproj  ASRSentBreakerMain.cpp  CMakeLists.txt
src/ATEASerif_Batch_English/: ATEAEnglishSerif.cpp  CMakeLists.txt
src/ATEASerif_English/: CMakeLists.txt  atea-server.cpp
src/ATEASerif_Generic/: CMakeLists.txt
src/ActiveLearning/: ActiveLearningData.cpp  ActiveLearningData.h  ActiveLearningUtilities.cpp  ActiveLearningUtilities.h  AnnotatedFeatureRecord.cpp  AnnotatedFeatureRecord.h  AnnotatedInstanceRecord.cpp  AnnotatedInstanceRecord.h  CMakeLists.txt  DataView.cpp  DataView.h  EventUtilities.cpp  EventUtilities.h  FeatureAnnotationDBView.h  FeatureGrid.h  InstanceAnnotationDB.cpp  InstanceAnnotationDB.h  InstanceHashes.cpp  InstanceHashes.h  MultilabelInferenceDataView.cpp  MultilabelInferenceDataView.h  SmoothedL1.cpp  SmoothedL1.h  StringStore.cpp  StringStore.h
src/AnnotatedParsePreprocessor/: AnnotatedParsePreprocessor.cpp  AnnotatedParsePreprocessor.vcproj  CMakeLists.txt  DocumentProcessor.cpp  DocumentProcessor.h  DocumentReader.cpp  DocumentReader.h
src/Arabic/: ArabicModule.cpp  ArabicModule.h  CMakeLists.txt
src/BasicCipherStream/: BasicCipherStreamEncryptFile.cpp  BasicCipherStreamEncryptionKey.h.in  BasicCipherStreamModule.cpp  BasicCipherStreamModule.h  BasicCipherStreamTest.cpp  CMakeLists.txt  README.TXT  UTF8BasicCipherInputStream.cpp  UTF8BasicCipherInputStream.h  encrypt.sh  encrypt_dir.sh
src/CMake/: CMakeLists.txt  Find7Zip.cmake  FindBoost.cmake  FindGperftools.cmake  FindLibpqxx.cmake  FindMTDecoder.cmake  FindMySQL.cmake  FindOCCI.cmake  FindOpenSSL.cmake  FindThrift.cmake  FindXercesC.cmake  brandy.cmake  configurations.cmake  create_shortcut.pl  definitions.cmake  dummy.cpp  macro.cmake  profile-generator.cmake  standalones-includes.cmake
src/Chinese/: CMakeLists.txt  ChineseModule.cpp  ChineseModule.h
src/Cluster/: CMakeLists.txt  ClusterMain.cpp  The Clustering Tool.doc  cluster.par  limits.h
src/CombineTemporalTraining/: CMakeLists.txt  CombineTemporalTraining.cpp
src/DTCorefTrainer/: CMakeLists.txt  DTCorefTrainerMain.cpp
src/DescriptorClassifierTrainer/: CMakeLists.txt  DescriptorClassifierTrainer.vcproj  DescriptorClassifierTrainerMain.cpp
src/DescriptorLinkerTrainer/: CMakeLists.txt  DescriptorLinkerTrainer.vcproj  DescriptorLinkerTrainerMain.cpp
src/DiscourseRelTrainer/: CMakeLists.txt  DiscourseRelTrainer.vcproj  DiscourseRelTrainerMain.cpp
src/DistillDocToLearnItDoc/: Annotation.h  CMakeLists.txt  DistillDocToLearnItDoc.cpp  LearnItDocConverter.cpp  LearnItDocConverter.h  PatternIRDocConverter.cpp  PatternIRDocConverter.h  PropIRDocConverter.cpp  PropIRDocConverter.h  SeedIRDocConverter.cpp  SeedIRDocConverter.h
src/DocSim/: CMakeLists.txt  doc_sim.cpp
src/English/: CMakeLists.txt  Changelog.xls  EnglishModule.cpp  EnglishModule.h
src/EnglishTest/: CMakeLists.txt  EnglishTest.cpp  EnglishTestModule.cpp  EnglishTestModule.h
src/EquivalentNamesUploader/: CMakeLists.txt  EquivalentNamesUploader.cpp  EquivalentNamesUploader.vcproj.vspscc
src/EventFinder/: CMakeLists.txt  EventFinderMain.cpp
src/Generic/: CMakeLists.txt
src/GraphicalModels/: Alphabet.cpp  Alphabet.h  BagOfWordsFactor.h  CMakeLists.txt  DataSet.h  DummyFactor.h  DumpVector.h  Factor.h  FactorGraphNode.h  Graph.h  GraphicalModelTypes.h  Message.cpp  Message.h  SingleFeatureDistributionFactor.h  Variable.h  VariablePriorFactor.h  VectorUtils.h
src/ICEWS/: CMakeLists.txt  ICEWSModule.cpp  ICEWSModule.h
src/ICEWS_LocRes_Branch/: ActorInfo.cpp  ActorInfo.h  ActorMention.cpp  ActorMention.h  ActorMentionFinder.cpp  ActorMentionFinder.h  ActorMentionPattern.cpp  ActorMentionPattern.h  ActorMentionSet.cpp  ActorMentionSet.h  CMakeLists.txt  EventMention.cpp  EventMention.h  EventMentionFinder.cpp  EventMentionFinder.h  EventMentionPattern.cpp  EventMentionPattern.h  EventMentionSet.cpp  EventMentionSet.h  EventType.cpp  EventType.h  Gazetteer.cpp  Gazetteer.h  ICEWSDB.cpp  ICEWSDB.h  ICEWSDocumentReader.cpp  ICEWSDocumentReader.h  ICEWSDriver.cpp  ICEWSDriver.h  ICEWSModule.cpp  ICEWSOutputWriter.cpp  ICEWSOutputWriter.h  ICEWSQueueFeeder.h  Identifiers.cpp  Identifiers.h  JabariTokenMatcher.cpp  JabariTokenMatcher.h  LocationMentionResolver.cpp  LocationMentionResolver.h  SentenceSpan.cpp  (+5 more)
src/IdfTrainer/: CMakeLists.txt  IdFTrainerMain.cpp
src/IdfTrainerPreprocessor/: CMakeLists.txt  DocumentReader.cpp  DocumentReader.h  DocumentWriter.cpp  DocumentWriter.h  IdfTrainerPreprocessor.cpp
src/InstanceFinder/: CMakeLists.txt  InstanceFinder.cpp
src/KbaStreamCorpus/: CMakeLists.txt  KbaStreamCorpusChunk.cpp  KbaStreamCorpusChunk.h  KbaStreamCorpusDocumentDriver.cpp  KbaStreamCorpusDocumentDriver.h  KbaStreamCorpusItemReader.cpp  KbaStreamCorpusItemReader.h  KbaStreamCorpusItemWriter.cpp  KbaStreamCorpusItemWriter.h  KbaStreamCorpusModule.cpp  KbaStreamCorpusModule.h  KbaStreamCorpusQueueFeeder.h
src/Korean/: CMakeLists.txt  Korean.vcproj  KoreanModule.cpp  KoreanModule.h
src/L2Analyzer/: CMakeLists.txt  L2Analyzer.cpp
src/LBFGS-B/: CMakeLists.txt  LBFGS.cpp  LBFGS.h
src/LearnIt/: AnnotatedTest.cpp  AnnotatedTest.h  BestName.cpp  BestName.h  CMakeLists.txt  Instance.cpp  Instance.h  InstanceLoader.cpp  InstanceLoader.h  LearnIt2.h  LearnIt2Matcher.cpp  LearnIt2Matcher.h  LearnItAnalyzer.cpp  LearnItAnalyzer.h  LearnItPattern.cpp  LearnItPattern.h  MainUtilities.cpp  MainUtilities.h  MatchInfo.cpp  MatchInfo.h  MatchProvenance.h  MentionToEntityMap.cpp  MentionToEntityMap.h  ObjectWithSlots.cpp  ObjectWithSlots.h  ProgramOptionsUtils.cpp  ProgramOptionsUtils.h  Seed.cpp  Seed.h  SlotConstraints.cpp  SlotConstraints.h  SlotFiller.cpp  SlotFiller.h  SlotFillerTypes.cpp  SlotFillerTypes.h  SlotPairConstraints.h  Target.cpp  Target.h
src/LearnIt2Trainer/: CMakeLists.txt  LearnIt2Trainer.cpp  LearnIt2TrainerUI.cpp  LearnIt2TrainerUI.h  OptimizationView.cpp  OptimizationView.h  ProbChart.cpp  (+3 more)
(+4343 files in other folders)
